<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string formatted="false" name="app_full_name">Quartertune</string>
  <string formatted="false" name="app_launcher_name">Quartertune</string>
  <string formatted="false" name="mic_unavailable_title">Mic Unavailable</string>
  <string formatted="false" name="mic_unavailable_message">Another
  app is currently using the microphone (e.g., the phone, another tuner, a sound recorder, etc.).\n

  \nPlease close the other app then try again.
  </string>
  <string formatted="false" name="okay">Okay</string>
  <string formatted="false" name="need_mic_permission">Quartertune requires access to microphone!</string>

  <string formatted="false" name="menu_settings">Settings</string>
  <string formatted="false" name="menu_help">Help</string>
  <string formatted="false" name="menu_rate_and_review">Rate &amp; Review</string>

  <string formatted="false" name="help_cat_version">Version</string>

  <string formatted="false" name="help_cat_changelog">Changelog</string>
  <string formatted="false" name="help_changelog">Quartertune is based on the Noteworthy Tuner. Please see the <a href="http://www.noteworthytuner.com/changelog">online Changelog</a>.
  </string>

  <string formatted="false" name="help_cat_faq">Frequently Asked Questions</string>
  <string formatted="false" name="help_faq">There are currently no FAQs available for Quartertune.
    FAQs for the original Noteworthy Tuner can be found <a href="http://www.noteworthytuner.com/faq">here</a>.
  </string>

  <string formatted="false" name="help_cat_website">Website</string>
  <string formatted="false" name="help_website">My website is <a href="https://jsfalk.com">jsfalk.com</a>.
    Information about the original Noteworthy Tuner is available at <a href="http://www.noteworthytuner.com/">its website</a>.
  </string>

  <string formatted="false" name="help_cat_open_source">Open Source</string>
  <string formatted="false" name="help_open_source">You can download the source code for Quartertune at <a href="https://github.com/jsfalk/Quartertune">here</a>.
    The source code for the original Noteworthy Tuner is available <a href="http://www.noteworthytuner.com/sourcecode">here</a>.
  </string>

  <!--string formatted="false" name="help_cat_donate">Donate</string>
  <string formatted="false" name="help_donate">Please
    consider donating by upgrading to the <a href="market://details?id=com.darshancomputing.BatteryIndicatorPro">Pro
    Version</a>.
  </string-->

  <string formatted="false" name="help_cat_privacy">Privacy Policy</string>
  <string formatted="false" name="help_private">Quartertune does not collect, store, or transmit any personal information.</string>

  <string formatted="false" name="help_cat_no_warranty">No Warranty</string>
  <string formatted="false" name="help_no_warranty">This software is distributed in the hope that it will be useful, but
    WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.\n

    \nWhile I do my best to make sure that it works well and does not
    cause problems, I am not responsible for any damage or inconvenience
    it may cause under any circumstance.
  </string>

  <!--string formatted="false" name="help_cat_acknowledgments">Acknowledgments</string>
  <string formatted="false" name="help_acknowledgments">This
    app would only be available in English without the generous
    assistance of the volunteer translators.  Thanks!\n

    \nMany thanks are due to Google and all of the open-source coders
    who made the Android platform and this app possible.\n

    \nThe launcher icon (the upright battery you see in the Market) is
    based on an icon from <a href="http://www.oxygen-icons.org">the
    Oxygen icon theme</a> and used under the
    <a href="http://creativecommons.org/licenses/by-sa/3.0/">Creative Common
      Attribution-ShareAlike 3.0 License</a>.
  </string>

  <string formatted="false" name="help_cat_translations">Translations</string>
  <string formatted="false" name="help_translations">I
    need help translating this app to new languages and maintaining
    the existing translations.  If you would like to help, please send
    me an <a href="mailto:support%2Btranslations@noteworthytuner.com">email</a>.
    Please let me know if and how you would like your name listed in
    this section in acknowledgment of your assistance.
  </string>

  <string formatted="false" name="help_subcat_translators">Translators</string-->

  <string formatted="false" name="help_cat_contact">Contact</string>
  <string formatted="false" name="help_contact">If
    you have a question, a problem, or a comment, please
    <a href="mailto:falk1729@gmail.com">email me</a>.
  </string>

  <string formatted="false" name="settings_activity_subtitle">Settings</string>

  <string formatted="false" name="currently_set_to">"Currently set to: "</string>
  <string formatted="false" name="currently_disabled">Currently Disabled</string>

  <!--string formatted="false" name="pref_larger_buffer">Use larger buffer</string>
  <string formatted="false" name="pref_larger_buffer_summary_default">Using default buffer size</string>
  <string formatted="false" name="pref_larger_buffer_summary_larger">Using larger buffer:
  Needle responds more slowly, better at detecting very low pitches
  </string-->

  <string formatted="false" name="pref_cat_a4">A4 frequency</string>

  <string formatted="false" name="pref_a4_hz">A4 frequency</string>
  <string formatted="false" name="pref_a4_hz_other">Other A4 frequency</string>

  <string formatted="false" name="pref_cat_beginners">Beginners</string>

  <string formatted="false" name="pref_flat_sharp_hint">Flat/sharp hint</string>

  <string formatted="false" name="pref_cat_support_dev">Support development</string>
  <string formatted="false" name="pref_support_dev_blurb">Both this app and the original Noteworthy App are ad-free with all features included.
    Please consider supporting the developer of the original Noteworthy App by purchasing
    the Pro version of their other app, BatteryBot.  (It\'s also open source and ad free!)
  Thanks!
  </string>
  <string formatted="false" name="get_batterybot_b">Get BatteryBot Pro</string>
</resources>
